问题解决（1、session问题 2、iframe内存溢出问题）

--- a/src/main/webapp/WEB-INF/view/404.html
+++ b/src/main/webapp/WEB-INF/view/404.html
@@ -29,8 +29,8 @@
     </div>
 
     <!-- 全局js -->
-    <script src="${ctxPath}/static/js/jquery.min.js?v=2.1.4"></script>
-    <script src="${ctxPath}/static/js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="${ctxPath}/static/js/jquery.min.js?v=${version}"></script>
+    <script src="${ctxPath}/static/js/bootstrap.min.js?v=${version}"></script>
 
 </body>
 
