--- a/src/main/webapp/WEB-INF/view/code/code.html
+++ b/src/main/webapp/WEB-INF/view/code/code.html
@@ -95,7 +95,7 @@
         </div>
     </div>
 </div>
-<script src="${ctxPath}/static/js/common/select-list-object.js"></script>
-<script src="${ctxPath}/static/modular/code/gen.js"></script>
+<script src="${ctxPath}/static/js/common/select-list-object.js?v=${version}"></script>
+<script src="${ctxPath}/static/modular/code/gen.js?v=${version}"></script>
 @}
 
