--- a/src/main/webapp/WEB-INF/view/system/dept/dept.html
+++ b/src/main/webapp/WEB-INF/view/system/dept/dept.html
@@ -34,5 +34,5 @@
         </div>
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/dept/dept.js"></script>
+<script src="${ctxPath}/static/modular/system/dept/dept.js?v=${version}"></script>
 @}
