--- a/src/main/webapp/WEB-INF/view/system/dept/dept_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/dept/dept_edit.html
@@ -39,5 +39,5 @@
 
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/dept/dept_info.js"></script>
+<script src="${ctxPath}/static/modular/system/dept/dept_info.js?v=${version}"></script>
 @}
