--- a/src/main/webapp/WEB-INF/view/system/dict/dict_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/dict/dict_edit.html
@@ -82,5 +82,5 @@
             </div>
         </script>
 
-        <script src="${ctxPath}/static/modular/system/dict/dict_info.js"></script>
+        <script src="${ctxPath}/static/modular/system/dict/dict_info.js?v=${version}"></script>
         @}
