--- a/src/main/webapp/WEB-INF/view/system/user/user_import_poi_excel.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_import_poi_excel.html
@@ -21,6 +21,6 @@
     </form>
 </div>
 
-<script src="${ctxPath}/static/modular/system/user/user_info.js"></script>
+<script src="${ctxPath}/static/modular/system/user/user_info.js?v=${version}"></script>
 
 @}
