--- a/src/main/webapp/WEB-INF/view/system/user/user_view.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_view.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/user/user_info.js"></script>
+<script src="${ctxPath}/static/modular/system/user/user_info.js?v=${version}"></script>
 <script>
     laydate.render({
         elem: '#birthday'
