--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -6,15 +6,15 @@
 
     <title>Guns - 登录</title>
 
-    <link rel="shortcut icon" href="${ctxPath}/static/favicon.ico">
-    <link href="${ctxPath}/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="${ctxPath}/static/css/font-awesome.css?v=4.4.0" rel="stylesheet">
-    <link href="${ctxPath}/static/css/style.css?v=4.1.0" rel="stylesheet">
+    <link rel="shortcut icon" href="${ctxPath}/static/favicon.ico?v=${version}">
+    <link href="${ctxPath}/static/css/bootstrap.min.css?v=${version}" rel="stylesheet">
+    <link href="${ctxPath}/static/css/font-awesome.css?v=${version}" rel="stylesheet">
+    <link href="${ctxPath}/static/css/style.css?v=${version}" rel="stylesheet">
     <script>if (window.top !== window.self) {
         window.top.location = window.location;
     }</script>
-    <script src="${ctxPath}/static/js/jquery.min.js?v=2.1.4"></script>
-    <script src="${ctxPath}/static/js/bootstrap.min.js?v=3.3.6"></script>
+    <script src="${ctxPath}/static/js/jquery.min.js?v=${version}"></script>
+    <script src="${ctxPath}/static/js/bootstrap.min.js?v=${version}"></script>
 </head>
 
 <body class="gray-bg">
