--- a/src/main/webapp/WEB-INF/view/system/code/code.html
+++ b/src/main/webapp/WEB-INF/view/system/code/code.html
@@ -43,5 +43,5 @@
         </div>
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/code/code.js"></script>
+<script src="${ctxPath}/static/modular/system/code/code.js?v=${version}"></script>
 @}
