--- a/src/main/webapp/WEB-INF/view/system/dict/dict_add.html
+++ b/src/main/webapp/WEB-INF/view/system/dict/dict_add.html
@@ -60,5 +60,5 @@
         </div>
     </script>
 
-    <script src="${ctxPath}/static/modular/system/dict/dict_info.js"></script>
+    <script src="${ctxPath}/static/modular/system/dict/dict_info.js?v=${version}"></script>
     @}
