--- a/src/main/webapp/WEB-INF/view/system/menu/menu.html
+++ b/src/main/webapp/WEB-INF/view/system/menu/menu.html
@@ -37,5 +37,5 @@
         </div>
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/menu/menu.js"></script>
+<script src="${ctxPath}/static/modular/system/menu/menu.js?v=${version}"></script>
 @}
