--- a/src/main/webapp/WEB-INF/view/system/menu/menu_add.html
+++ b/src/main/webapp/WEB-INF/view/system/menu/menu_add.html
@@ -2,7 +2,7 @@
 <div class="ibox float-e-margins">
 	<div class="ibox-content">
 		<div class="form-horizontal" id="menuInfoForm">
-		
+
 			<input type="hidden" id="id" value="">
 
 			<div class="row">
@@ -36,5 +36,5 @@
 
 	</div>
 </div>
-<script src="${ctxPath}/static/modular/system/menu/menu_info.js"></script>
+<script src="${ctxPath}/static/modular/system/menu/menu_info.js?v=${version}"></script>
 @}
