--- a/src/main/webapp/WEB-INF/view/system/menu/menu_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/menu/menu_edit.html
@@ -38,5 +38,5 @@
 
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/menu/menu_info.js"></script>
+<script src="${ctxPath}/static/modular/system/menu/menu_info.js?v=${version}"></script>
 @}
