--- a/src/main/webapp/WEB-INF/view/system/notice/notice_add.html
+++ b/src/main/webapp/WEB-INF/view/system/notice/notice_add.html
@@ -34,6 +34,6 @@
 
     </div>
 </div>
-<script type="text/javascript" src="//unpkg.com/wangeditor/release/wangEditor.min.js"></script>
-<script src="${ctxPath}/static/modular/system/notice/notice_info.js"></script>
+<script type="text/javascript" src="//unpkg.com/wangeditor/release/wangEditor.min.js?v=${version}"></script>
+<script src="${ctxPath}/static/modular/system/notice/notice_info.js?v=${version}"></script>
 @}
