--- a/src/main/webapp/WEB-INF/view/system/notice/notice_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/notice/notice_edit.html
@@ -34,6 +34,6 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="${ctxPath}/static/js/plugins/wangEditor/wangEditor.js"></script>
-<script src="${ctxPath}/static/modular/system/notice/notice_info.js"></script>
+<script type="text/javascript" src="${ctxPath}/static/js/plugins/wangEditor/wangEditor.js?v=${version}"></script>
+<script src="${ctxPath}/static/modular/system/notice/notice_info.js?v=${version}"></script>
 @}
