--- a/src/main/webapp/WEB-INF/view/system/role/role_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/role/role_edit.html
@@ -2,7 +2,7 @@
 <div class="ibox float-e-margins">
 	<div class="ibox-content">
 		<div class="form-horizontal" id="roleInfoForm">
-		
+
 			<input type="hidden" id="id" value="${role.id}">
 
 			<div class="row">
@@ -26,7 +26,7 @@
 				style="display: none; position: absolute; z-index: 200;">
 				<ul id="deptTree" class="ztree tree-box" style="width: 250px !important;"></ul>
 			</div>
-			
+
 			<!-- 这是父级菜单下拉框 -->
 			<div id="pNameContent" class="menuContent"
 				style="display: none; position: absolute; z-index: 200;">
@@ -43,5 +43,5 @@
 
 	</div>
 </div>
-<script src="${ctxPath}/static/modular/system/role/role_info.js"></script>
+<script src="${ctxPath}/static/modular/system/role/role_info.js?v=${version}"></script>
 @}
