--- a/src/main/webapp/WEB-INF/view/system/user/user.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user.html
@@ -79,7 +79,7 @@
 		</div>
 	</div>
 </div>
-<script src="${ctxPath}/static/modular/system/user/user.js"></script>
+<script src="${ctxPath}/static/modular/system/user/user.js?v=${version}"></script>
 <script>
     laydate.render({
         elem: '#beginTime'
