--- a/src/main/webapp/WEB-INF/view/system/user/user_add.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_add.html
@@ -54,7 +54,7 @@
 
 	</div>
 </div>
-<script src="${ctxPath}/static/modular/system/user/user_info.js"></script>
+<script src="${ctxPath}/static/modular/system/user/user_info.js?v=${version}"></script>
 <script>
     laydate.render({
         elem: '#birthday'
