--- a/src/main/webapp/WEB-INF/view/system/user/user_chpwd.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_chpwd.html
@@ -30,5 +30,5 @@
         </div>
     </div>
 </div>
-<script src="${ctxPath}/static/modular/system/user/user_info.js"></script>
+<script src="${ctxPath}/static/modular/system/user/user_info.js?v=${version}"></script>
 @}
