给树形菜单添加展开和折所有行的功能。bootstrap-treetable.js中添加展开和折叠所有行

--- a/src/main/webapp/WEB-INF/view/system/menu/menu.html
+++ b/src/main/webapp/WEB-INF/view/system/menu/menu.html
@@ -29,6 +29,7 @@
                             @if(shiro.hasPermission("/menu/remove")){
                                 <#button name="删除" icon="fa-remove" clickFun="Menu.delMenu()" space="true"/>
                             @}
+                            <#button name="展开/折叠" icon="fa fa-exchange" clickFun="Menu.expandAllBtn()" space="true"/>
                         </div>
                         <#table id="menuTable"/>
                     </div>
