--- a/src/main/webapp/WEB-INF/view/system/user/user_add.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_add.html
@@ -9,11 +9,20 @@
 				<div class="col-sm-6 b-r">
 					<#input id="account" name="账户" underline="true"/>
 
-					<#select id="sex" name="性别" underline="true">
-						<option value="1">男</option>
-						<option value="2">女</option>
-					</#select>
-
+<!--					<#select id="sex" name="性别" underline="true" >-->
+<!--						<option value="1">男</option>-->
+<!--						<option value="2">女</option>-->
+<!--					</#select>-->
+					<div class="form-group">
+						<label class="col-sm-3 control-label">性别</label>
+						<div class="col-sm-9">
+							<select class="form-control chosen-select" id="sex" name="sex" tabindex="1" data-placeholder="请选择性别">
+								<option value="1">男</option>
+								<option value="2">女</option>
+							</select>
+						</div>
+					</div>
+					<div class="hr-line-dashed"></div>
 					<#input id="password" name="密码" underline="true" type="password"/>
 
 					<#input id="roleid" name="角色" underline="true" disabled="disabled"/>
