下拉搜索：Bootstrap-Select、chosen.jquery.js

--- a/src/main/webapp/WEB-INF/view/common/_container.html
+++ b/src/main/webapp/WEB-INF/view/common/_container.html
@@ -18,6 +18,7 @@
     <link href="${ctxPath}/static/css/plugins/webuploader/webuploader.css?v=${version}" rel="stylesheet">
     <link href="${ctxPath}/static/css/plugins/ztree/zTreeStyle.css?v=${version}" rel="stylesheet">
     <link href="${ctxPath}/static/css/plugins/bootstrap-treetable/bootstrap-treetable.css?v=${version}" rel="stylesheet"/>
+    <link href="${ctxPath}/static/css/plugins/bootstrap-select/bootstrap-select.min.css?v=${version}" rel="stylesheet"/>
     <!-- <link href="${ctxPath}/static/css/plugins/ztree/demo.css" rel="stylesheet"> -->
 
     <!-- 全局js -->
@@ -41,6 +42,7 @@
     <script src="${ctxPath}/static/js/common/web-upload-object.js?v=${version}"></script>
     <script src="${ctxPath}/static/js/common/ztree-object.js?v=${version}"></script>
     <script src="${ctxPath}/static/js/common/Feng.js?v=${version}"></script>
+    <script src="${ctxPath}/static/js/plugins/bootstrap-select/bootstrap-select.min.js?v=${version}"></script>
 
     <style type="text/css">
         table{
