--- a/src/main/webapp/WEB-INF/view/system/role/role_add.html
+++ b/src/main/webapp/WEB-INF/view/system/role/role_add.html
@@ -17,6 +17,7 @@
 				</div>
 				<div class="col-sm-6">
 					<#input id="tips" name="别名" underline="true"/>
+					<#input id="roleKey" name="权限字符" underline="true"/>
 					<#input id="num" name="排序"/>
 				</div>
 			</div>
