--- a/src/main/webapp/WEB-INF/view/system/role/role_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/role/role_edit.html
@@ -17,6 +17,7 @@
 				</div>
 				<div class="col-sm-6">
 					<#input id="tips" name="别名" underline="true" value="${role.tips}"/>
+					<#input id="roleKey" name="权限字符" underline="true" value="${role.roleKey}"/>
 					<#input id="num" name="排序" value="${role.num}"/>
 				</div>
 			</div>
