富文本编辑器wangEditor和系统参数，启动时将系统参数和字典加入缓存

--- a/src/main/webapp/WEB-INF/view/common/_container.html
+++ b/src/main/webapp/WEB-INF/view/common/_container.html
@@ -21,6 +21,8 @@
     <link href="${ctxPath}/static/css/plugins/bootstrap-select/bootstrap-select.min.css?v=${version}" rel="stylesheet"/>
     <!-- <link href="${ctxPath}/static/css/plugins/ztree/demo.css" rel="stylesheet"> -->
 
+    <link rel="stylesheet" href="${ctxPath}/static/css/wangEditor-fullscreen-plugin.css?v=${version}">
+
     <!-- 全局js -->
     <script src="${ctxPath}/static/js/jquery.min.js?v=${version}"></script>
     <script src="${ctxPath}/static/js/bootstrap.min.js?v=${version}"></script>
