--- a/src/main/webapp/WEB-INF/view/system/notice/notice.html
+++ b/src/main/webapp/WEB-INF/view/system/notice/notice.html
@@ -3,17 +3,18 @@
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
-                <h5>通知管理</h5>
+                <h5>信息发布</h5>
             </div>
             <div class="ibox-content">
                 <div class="row row-lg">
                     <div class="col-sm-12">
                         <div class="row">
                             <div class="col-sm-3">
-                                <#NameCon id="condition" name="名称" />
+                                <#NameCon id="condition" name="名称" placeholder="标题/内容"/>
                             </div>
                             <div class="col-sm-3">
                                 <#button name="搜索" icon="fa-search" clickFun="Notice.search()"/>
+                                <#button name="重置" icon="fa-trash" clickFun="Notice.resetSearch()" space="true"/>
                             </div>
                         </div>
                         <div class="hidden-xs" id="NoticeTableToolbar" role="group">
@@ -21,10 +22,10 @@
                                 <#button name="添加" icon="fa-plus" clickFun="Notice.openAddNotice()"/>
                             @}
                             @if(shiro.hasPermission("/notice/update")){
-                                <#button name="修改" icon="fa-plus" clickFun="Notice.openNoticeDetail()" space="true"/>
+                                <#button name="修改" icon="fa-edit" clickFun="Notice.openNoticeDetail()" space="true"/>
                             @}
                             @if(shiro.hasPermission("/notice/delete")){
-                                <#button name="删除" icon="fa-plus" clickFun="Notice.delete()" space="true"/>
+                                <#button name="删除" icon="fa-remove" clickFun="Notice.delete()" space="true"/>
                             @}
                         </div>
                         <#table id="NoticeTable"/>
